k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uskoruma
  labels:
    app.kubernetes.io/part-of: uskoruma
